@@ -1,5 +1,11 @@
 2014-12-06  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
 
+	* soap-client.el (soap-invoke-internal): New function.
+	(soap-invoke-async): Call soap-invoke-internal.
+	(soap-invoke): Likewise.
+
+2014-12-06  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
 	* soap-client.el (soap-invoke-async): Ensure buffer passed to
 	url-retrieve callback is killed.
 
